--- a/password_generator/style.css
+++ b/password_generator/style.css
@@ -69,4 +69,24 @@ body{
     padding: 16px 26px;
     border-radius: 5px;
     cursor: pointer;
+    margin-bottom: 20px;
+}
+#length-input{
+    height: 30px;
+    width: 40%;
+    background-color: #019f55;
+    color: #019f55;
+    margin-bottom: 25px;
+    margin-right: 25px;
+}
+.scrollbar{
+    display: flex;
+    align-items: flex-start;
+}
+.scrollbar span{
+    font-size: 20px;
+    font-weight: 500;
+}
+p{
+    margin: 15px 0;
 }
