--- a/text_to_voice_converter/style.css
+++ b/text_to_voice_converter/style.css
@@ -1,8 +1,3 @@
-/* .poppins-medium {
-    font-family: "Poppins", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-  } */
 *{
     box-sizing: border-box;
     margin: 0;
@@ -98,14 +93,15 @@ select{
         width: 360px;
     }
     .row{
-        height: 150px;
+        height: 167px;
         flex-direction: column;
     }
     select{
         font-size: 12px;
         height: 30px;
         margin: 25px 0;
-        padding: 25px 0;
         width: 100%;
+        background-size: 12px;
+        background-position-y: 32px;
     }
 }
